Bug 1427267 - Improve libsoundtouch high playback rate speech clarity with pitch preservation by using a smaller time stretcher sequence size r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D57085

--HG--
extra : moz-landing-system : lando